# ferrumML

./: .gitignore  Cargo.toml  README.md  k_means_log.txt  log.txt  rust-toolchain.toml
src/: csv_handling.rs  csv_handling_logs  csv_handling_test.rs  general.rs  lib.rs  main.rs  trait_definition.rs  vulcan_boilerplate.rs  vulcan_test.rs
src/clustering/heiarchial_clustering/: heiarchial_clustering.rs
src/clustering/k_means_clustering/: k_means_clustering.rs  k_means_test.rs  test_log.txt
src/data_frame/: data_frame.rs  data_frame_test.rs  data_type.rs  return_type.rs
src/evaluation/: accuracy.rs
src/feature_extraction/: image_handling.rs  image_handling_tests.rs  tokenisation.rs  tokenisation_test.rs
src/file_handling/: read_from.rs
src/n_dimen/: n_dimen.rs
src/neural_networks/: compute_convolution.wgsl  convolution.rs  convolution_architecture.rs  convolution_kernel.rs  convolution_test.rs  network_pipe.rs  neural_network.rs  neural_network_test.rs
src/supervised/linear_regression/: linear_regression.rs
src/supervised/naive_bayes/: gaussian_NB.rs  multinomial_NB.rs  naive_bayes.rs  naive_bayes_test.rs
