[package]
name = "ferrumML"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "*"
fastrand = "*"
plotters = "*"
plotlib = "*"
rand = "*"
rayon = "*"
sprs = "*"
rust-stemmers = "*"
wgpu = "*"
env_logger = "*"
image = "*"


[profile.dev]
opt-level = 3